Fix TransitionsMatrix scrollbar

--- a/app/assets/stylesheets/_map.scss
+++ b/app/assets/stylesheets/_map.scss
@@ -221,6 +221,7 @@
 
   &__content {
     overflow: auto;
+    padding: $micro-spacing;
     max-height: 100%;
 
     @include media($mobile) {
